--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "mini-css-extract-plugin": "^1.3.2",
+    "node-sass": "^5.0.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.10.0",
